--- a/ToDoList/src/ToDoList.Frontend/Components/Dashboard.razor
+++ b/ToDoList/src/ToDoList.Frontend/Components/Dashboard.razor
@@ -1,6 +1,7 @@
 ﻿@using ToDoList.Frontend.Views
 @using ToDoList.Frontend.Clients
 @inject IToDoItemsClient ToDoItemsClient
+@inject NavigationManager NavigationManager
 @rendermode InteractiveServer
 
 <style>
@@ -15,31 +16,17 @@
 
 <h1>Dashboard</h1>
 
-<table>
-    <thead>
-        <tr>
-            <th style="width:10%"><button style="background: none;
-  border: none;
-  padding: 0;
-  font: inherit;
-  color: white;
-  text-decoration: underline;
-  cursor: pointer;
-  font-size: 16px;" @onclick="OrderItemsById">Id</button>▾</th>
-            <th style="width:25%"><button style="background: none;
-  border: none;
-  padding: 0;
-  font: inherit;
-  color: white;
-  text-decoration: underline;
-  cursor: pointer;
-  font-size: 16px;" @onclick="OrderItemsByName">Name</button>▾</th>
-            <th style="width:15%">Category</th>
-            <th style="width:40%">Description</th>
-            <th style="width:10%">Completed?</th>
-        </tr>
+<table class="table table-hover mt-5">
+    <thead class="table-dark">
+            <th>Id</th>
+            <th>Name</th>
+            <th>Category</th>
+            <th>Description</th>
+            <th>Completed?</th>
+            <th>Actions</th>
     </thead>
 
+    <tbody>
     @if (toDoItems == null)
     {
         <p>Načítám...</p>
@@ -49,20 +36,22 @@
     {
     @foreach (var toDoItem in toDoItems)
         {
-        <tr>
+        <tr class=@SetRowClassBasedOnTaskCompletion(toDoItem)>
            <td>@toDoItem.ToDoItemId</td>
            <td>@toDoItem.Name</td>
            <td>@toDoItem.Category</td>
            <td>@toDoItem.Description</td>
            <td>@(toDoItem.IsCompleted ? "Yes" : "No")</td>
+           <td><button class="btn btn-success" @onclick="() => EditItem(toDoItem)">Edit</button></td>
         </tr>
         }
     }
+    </tbody>
 
 </table>
 <br>
-<button @onclick="OrderItemsById">Order by ID</button>
-<button @onclick="OrderItemsByName">Order by name</button>
+<button class="btn btn-success" @onclick="OrderItemsById">Order by ID</button>
+<button class="btn btn-success" @onclick="OrderItemsByName">Order by name</button>
 
 @code
 {
@@ -73,6 +62,11 @@
 
     private List<ToDoItemView>? toDoItems = [];
 
+    private string SetRowClassBasedOnTaskCompletion(ToDoItemView item)
+    {
+        return item.IsCompleted ? "table-success" : "table-secondary";
+    }
+
     private void OrderItemsById()
     {
         toDoItems = toDoItems?.OrderBy(i => i.ToDoItemId).ToList();
@@ -80,5 +74,10 @@
     private void OrderItemsByName()
     {
         toDoItems = toDoItems?.OrderBy(i => i.Name).ToList();
+    }
+
+    public void EditItem(ToDoItemView item)
+    {
+        NavigationManager.NavigateTo($"editToDoItem/{item.ToDoItemId}");
     }
 }
