--- a/ToDoList/src/ToDoList.Frontend/Components/Dashboard.razor
+++ b/ToDoList/src/ToDoList.Frontend/Components/Dashboard.razor
@@ -69,7 +69,7 @@
 
 @code
 {
-    private ToDoItemView ItemToDelete = new ToDoItemView();
+    private ToDoItemView ItemToDelete = new ToDoItemView() {Name = "name", Description = "description"};
 
     private void SetItemToDelete(ToDoItemView itemToDelete)
     {
