--- a/ToDoList/src/ToDoList.Frontend/Components/Pages/EditToDoItem.razor
+++ b/ToDoList/src/ToDoList.Frontend/Components/Pages/EditToDoItem.razor
@@ -10,25 +10,25 @@
 <div class="container mt-4">
 @if (ToDoItem is not null)
 {
-    <EditForm Model="ToDoItem" FormName="EditToDoItem" OnSubmit="Submit" class="row g-3">
-        <div class="col-md-6">
-            <label class="form-label">Name:</label><InputText id="Name" @bind-Value="ToDoItem.Name" class="form-control"/>
-        </div>
-        <div class="col-md-6">
-            <label class="form-label">Category:</label><InputText id="Category" @bind-Value="ToDoItem.Category" class="form-control"/>
-        </div>
-        <div class="col-md-12">
-            <label class="form-label">Description:</label><InputText id="Description" @bind-Value="ToDoItem.Description" class="form-control"/>
-        </div>
-        <div class="col-md-12">
-        <div class="form-check">
-            <label class="form-check-label">Is completed? </label><InputCheckbox id="IsCompleted" @bind-Value="ToDoItem.IsCompleted" class="form-check-input"/>
-        </div>
-        </div>
-        <div>
-            <button type="submit" class="btn btn-success">Submit</button>
-            <button type="button" class="btn btn-danger" @onclick="Return">Cancel</button>
-        </div>
+    <EditForm Model="ToDoItem" FormName="EditToDoItem" OnValidSubmit="Submit"> @*OnSubmit -> OnValidSubmit*@
+        <DataAnnotationsValidator />
+        <label for="Name" class="form-label">Name:</label>
+        <InputText id="Name" class="form-control" @bind-Value="ToDoItem.Name" />
+        <ValidationMessage For="() => ToDoItem.Name" />
+
+        <label for="Category" class="form-label">Category:</label>
+        <InputText id="Category" class="form-control" @bind-Value="ToDoItem.Category" />
+        <ValidationMessage For="() => ToDoItem.Category" />
+
+        <label for="Description" class="form-label">Description:</label>
+        <InputText id="Description" class="form-control" @bind-Value="ToDoItem.Description" />
+        <ValidationMessage For="() => ToDoItem.Description" />
+
+        <label for="IsCompleted" class="form-check-label">IsCompleted:</label>
+        <InputCheckbox id="IsCompleted" class="form-check" @bind-Value="ToDoItem.IsCompleted" />
+        <ValidationMessage For="() => ToDoItem.IsCompleted" />
+
+        <button type="submit">Submit</button>
     </EditForm>
 
 }
@@ -39,6 +39,8 @@
     protected override async Task OnInitializedAsync()
     {
         ToDoItem = await ToDoItemsClient.ReadByIdAsync(ItemId);
+        SubmitDelegate = LogSubmit;
+        SubmitDelegate -= LogSubmit;
     }
 
     [Parameter]
@@ -47,8 +49,18 @@
     [SupplyParameterFromForm]
     public ToDoItemView ToDoItem { get; set; }
 
+    private delegate void ToDoItemViewProcessingDelegate(ToDoItemView toDoItem);
+
+    private ToDoItemViewProcessingDelegate SubmitDelegate;
+
+    private void LogSubmit(ToDoItemView toDoItem)
+    {
+        Console.WriteLine($"Item with Id {toDoItem.ToDoItemId} was updated.");
+    }
+
     public async Task Submit()
     {
+        SubmitDelegate?.Invoke(ToDoItem);
         await ToDoItemsClient.UpdateByIdAsync(ToDoItem);
         NavigationManager.NavigateTo("/");
     }
