--- a/ToDoList/src/ToDoList.Frontend/Components/Pages/Home.razor
+++ b/ToDoList/src/ToDoList.Frontend/Components/Pages/Home.razor
@@ -4,3 +4,53 @@
 <PageTitle>Home</PageTitle>
 
 <Dashboard/>
+
+@code
+{
+    public delegate int NumberOperationDelegate(int number1, int number2);
+
+    int Multiply (int a, int b)
+    {
+        //Console.WriteLine("Multiply called");
+        return a * b;
+    }
+
+    int Divide (int a, int b)
+    {
+        //Console.WriteLine("Divide called");
+        return a / b;
+    }
+
+    public int DelejVypocty(int a, int b, NumberOperationDelegate operation)
+    {
+        return operation(a, b);
+    }
+
+    protected override async Task OnInitializedAsync()
+    {
+        NumberOperationDelegate operationDelegate;
+        operationDelegate = Multiply;
+        operationDelegate += Divide;
+        operationDelegate += Multiply;
+
+        var result = operationDelegate(2, 3);
+        //Console.WriteLine(result);
+
+        List<string> strings = ["a", "b", "cdasfojdsaj", "d", "e"];
+        foreach (var s in strings.Where(s => s.Contains('c')))
+        {
+            //Console.WriteLine(s);
+        }
+
+        Action<string> actionTakingString = LogToConsole;
+        actionTakingString?.Invoke("Ahoj, posílám zprávu.");
+
+        Func<int, int, int> numberOperationFunc;
+    }
+
+    public delegate void StringProcessingDelegate(string message);
+    public void LogToConsole(string msg)
+    {
+        Console.WriteLine(msg);
+    }
+}
