--- a/ToDoList/src/ToDoList.Frontend/Components/Dashboard.razor
+++ b/ToDoList/src/ToDoList.Frontend/Components/Dashboard.razor
@@ -4,9 +4,11 @@
 @inject NavigationManager NavigationManager
 @rendermode InteractiveServer
 
+<div class="py-3">
 <h1>Dashboard</h1>
+</div>
 
-<table class="table table-hover mt-5">
+<table class="table table-hover py-3">
     <thead class="table-dark">
             <th>Id</th>
             <th>Name</th>
@@ -64,9 +66,11 @@
 
 </table>
 <br>
+<div class="pb-3">
 <button class="btn btn-success" @onclick="CreateItem">Create new task</button>
 <button class="btn btn-success" @onclick="OrderItemsById">Order by ID</button>
 <button class="btn btn-success" @onclick="OrderItemsByName">Order by name</button>
+</div>
 
 @code
 {
